# intro-to-software-construction-PokeGuys

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Attacks/: Attack.hpp  NeutralAttack.hpp  NormalAttackStrategy.hpp  TypedAttack.hpp  TypedAttackStrategy.hpp  calculate.hpp
Attacks/Moves/: ClawAttack.hpp  DropAttack.hpp  ElectricAttack.hpp  FireAttack.hpp  GrassAttack.hpp  PunchAttack.hpp  RamAttack.hpp  WaterAttack.hpp
Base/: add.hpp  mult.hpp  op.hpp  sub.hpp
Factory/: ElectricFactory.hpp  FireFactory.hpp  GrassFactory.hpp  MoveFactory.hpp  WaterFactory.hpp
Tests/: attack_test.hpp  base_tests.hpp  factory_tests.cpp  guys_tests.hpp  unit_tests.cpp
guys/: ElectricGuy.hpp  FireGuy.hpp  GrassGuy.hpp  Guy.hpp  WaterGuy.hpp
